force-app/main/default/objects/Resource_Allocation__c/fields/Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Hours__c</fullName>
    <label>Allocated Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>