force-app/main/default/objects/Resource_Allocation__c/fields/Daily_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Daily_Capacity__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Daily Capacity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>