force-app/main/default/objects/Resource_Allocation__c/fields/Is_Overloaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Overloaded__c</fullName>
    <formula>Allocated_Hours__c &gt;Daily_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overloaded</label>
    <type>Checkbox</type>
</CustomField>