force-app/main/default/objects/Resource_Allocation__c/fields/Is_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Is_Weekend__c</fullName>
    <formula>OR(
    WEEKDAY(TODAY()) = 1,
    WEEKDAY(TODAY()) = 7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Weekend</label>
    <type>Checkbox</type>
</CustomField>