force-app/main/default/objects/Resource_Allocation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Resource Allocations</relationshipLabel>
    <relationshipName>Resource_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>