force-app/main/default/objects/Resource_Allocation__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Tasks__c</referenceTo>
    <relationshipLabel>Resource Allocations</relationshipLabel>
    <relationshipName>Resource_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>