force-app/main/default/objects/Resource_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Project__c</columns>
    <columns>Task__c</columns>
    <columns>Resource__c</columns>
    <columns>Allocated_Hours__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>